// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointAccordion should match snapshot closed 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#303030",
    }
  }
>
  <View>
    <View
      style={
        Object {
          "backgroundColor": "#f6f6f6",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
            "expanded": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Object {
                "padding": 8,
              },
              Object {
                "backgroundColor": "#303030",
                "borderColor": "#ffd600",
                "borderStyle": "solid",
                "borderWidth": 1,
                "color": "#ffd600",
                "padding": 0,
              },
            ],
          ]
        }
      >
        <View
          pointerEvents="none"
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "margin": 8,
                },
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  Object {
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "fontSize": 16,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                    },
                    Object {
                      "color": "#ffd600",
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    Temper
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    Truck
                  </Text>
                </View>
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    2
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    1
                  </Text>
                </View>
              </View>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "margin": 8,
                },
                undefined,
              ]
            }
          >
            <View>
              <View
                style={
                  Object {
                    "marginBottom": -10,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "alignSelf": "flex-end",
                      "backgroundColor": "red",
                      "borderRadius": 5,
                      "height": 10,
                      "opacity": 0,
                      "width": 10,
                    }
                  }
                />
              </View>
              <View
                pointerEvents="box-none"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "margin": 8,
                      "width": 40,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#ffd600",
                        "fontSize": 24,
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "transform": Array [
                            Object {
                              "scaleX": 1,
                            },
                          ],
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰅀
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PointAccordion should match snapshot open 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#303030",
    }
  }
>
  <View>
    <View
      style={
        Object {
          "backgroundColor": "#f6f6f6",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
            "expanded": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Object {
                "padding": 8,
              },
              Object {
                "backgroundColor": "#303030",
                "borderColor": "#31adff",
                "borderStyle": "solid",
                "borderWidth": 1,
                "color": "#ffd600",
                "padding": 0,
              },
            ],
          ]
        }
      >
        <View
          pointerEvents="none"
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "margin": 8,
                },
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  Object {
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "fontSize": 16,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                    },
                    Object {
                      "color": "#ffd600",
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    Temper
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    Truck
                  </Text>
                </View>
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    2
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                      }
                    }
                  >
                    1
                  </Text>
                </View>
              </View>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "margin": 8,
                },
                undefined,
              ]
            }
          >
            <View>
              <View
                style={
                  Object {
                    "marginBottom": -10,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "alignSelf": "flex-end",
                      "backgroundColor": "red",
                      "borderRadius": 5,
                      "height": 10,
                      "opacity": 0,
                      "width": 10,
                    }
                  }
                />
              </View>
              <View
                pointerEvents="box-none"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "margin": 8,
                      "width": 40,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#ffd600",
                        "fontSize": 24,
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "transform": Array [
                            Object {
                              "scaleX": 1,
                            },
                          ],
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰅀
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
